# gstreamer

./: .build.yaml  .gitreview  configure.ac
debian/: changelog  control  control.in  dh_gstscancodecs  dh_gstscancodecs1.5  libgstreamer-dev.install  libgstreamer-dev.postrm  libgstreamer-dev.preinst  libgstreamer.symbols  rules
gst/: Makefile.am  gst.c  gst_private.h  gstelement.c  gstghostpad.c  gstinfo.c  gstinfo.h  gstpad.c  gstquark.h  gsttask.c  gsttask.h  gsttaskpool.c  gsttaskpool.h
plugins/: Makefile.am
plugins/elements/: gstfunnel.c  gstfunnel.h  gstqueue.c  gstqueue.h  gsttee.c  gsttee.h
plugins/tracers/: gststats.c
po/: Makevars  zh_TW.po
tests/check/: Makefile.am
tests/examples/streams/: .gitignore  Makefile.am  schedule-tasks.c
tools/: gst-inspect.c
win32/common/: libgstreamer.def
